--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "tests": "npx playwright test",
     "test: specific": "npx playwright test --grep environment-variables.spec.js",
-    "test:tag": "npx playwright test --grep @env-test",
+    "test:smoke": "npx playwright test --grep @smoke",
     "report": "npx playwright show-report"
   },
   "keywords": [],
